# mouse_acceleration_checker

./: Cargo.toml  README.md
src/: main.rs
