[package]
name = "mouse-acceleration-checker"
version = "0.1.0"
edition = "2021"
author = "misxki"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
registry = "1.2.2"
# utfx = "0.1.0"

[target.'cfg(windows)'.dependencies]
winrt-notification = "0.5.1"